Add login components for Google auth

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<!-- Main Wrapper -->
+<div class="main-wrapper login-body">
+    <div class="login-wrapper">
+        <div class="container">
+            <div class="loginbox">
+                <div class="login-right">
+                    <div class="login-right-wrap">
+                        <h1>Superbowl Razilla Bets</h1>
+                        <p class="account-subtitle">Inicia sesión para apostar</p>
+                        <!-- Social Login -->
+                        <div class="social-login mb-3">
+                            <a href="javascript:void(0)" (click)="googleLogin()" class="google">
+                                    <i class="fab fa-google"></i>
+                                </a>
+                        </div>
+                        <!-- /Social Login -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /Main Wrapper -->
