--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,44 @@
-<p>main works!</p>
+<div class="main-wrapper login-body">
+    <div class="login-wrapper">
+        <div class="container">
+          <div class="card">
+           <div class="card-header">
+           	  <h3 class="float-left">Estadísticas</h3>
+              <button class="float-right btn btn-primary">
+            	<i class="fa fa-plus"></i>
+              </button>
+           </div>
+           <div class="card-body">
+			<table class="table table-hover">
+			  <thead>
+			    <tr>
+			      <th scope="col">#</th>
+			      <th scope="col">First</th>
+			      <th scope="col">Last</th>
+			      <th scope="col">Handle</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <th scope="row">1</th>
+			      <td>Mark</td>
+			      <td>Otto</td>
+			      <td>@mdo</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">2</th>
+			      <td>Jacob</td>
+			      <td>Thornton</td>
+			      <td>@fat</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">3</th>
+			      <td colspan="2">Larry the Bird</td>
+			      <td>@twitter</td>
+			    </tr>
+			  </tbody>
+			</table>
+          </div>
+        </div>
+    </div>
+</div>
