Add router link to add component

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,7 +4,7 @@
           <div class="card">
            <div class="card-header">
            	  <h3 class="float-left">Estadísticas</h3>
-              <button class="float-right btn btn-primary">
+              <button [routerLink]="'/add'" class="float-right btn btn-primary">
             	<i class="fa fa-plus"></i>
               </button>
            </div>
