--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,29 +12,16 @@
 			<table class="table table-hover">
 			  <thead>
 			    <tr>
-			      <th scope="col">#</th>
-			      <th scope="col">First</th>
-			      <th scope="col">Last</th>
-			      <th scope="col">Handle</th>
+			      <th></th>
+			      <th>Question</th>
+			      <td *ngFor="let user of users" scope="col">{{ user.username }}</td>
 			    </tr>
 			  </thead>
-			  <tbody>
-			    <tr>
-			      <th scope="row">1</th>
-			      <td>Mark</td>
-			      <td>Otto</td>
-			      <td>@mdo</td>
-			    </tr>
-			    <tr>
-			      <th scope="row">2</th>
-			      <td>Jacob</td>
-			      <td>Thornton</td>
-			      <td>@fat</td>
-			    </tr>
-			    <tr>
-			      <th scope="row">3</th>
-			      <td colspan="2">Larry the Bird</td>
-			      <td>@twitter</td>
+			  <tbody *ngFor="let user of users">
+			    <tr *ngFor="let answer of user.bets; index as i">
+			      <th *ngIf="i!=0" scope="row">{{i}}</th>
+			      <th *ngIf="i!=0" scope="row">{{ answer.question }}</th>
+			      <td *ngIf="i!=0" scope="row">{{ answer.answer }}</td>
 			    </tr>
 			  </tbody>
 			</table>
