--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,8 +4,11 @@
           <div class="card">
            <div class="card-header">
            	  <h3 class="float-left">Estadísticas</h3>
-              <button [routerLink]="'/add'" class="float-right btn btn-primary">
-            	<i class="fa fa-plus"></i>
+              <button (click)="logout()" class="float-right btn btn-secondary mr-1">
+            	<i class="fa fa-sign-out-alt"></i> Salir
+        	  </button>
+              <button [routerLink]="'/add'" class="float-right btn btn-primary mr-1">
+            	<i class="fa fa-plus"></i> Agregar Apuesta
               </button>
            </div>
            <div class="card-body">
